--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,6 @@
         <slf4j.version>1.7.29</slf4j.version>
         <netty.version>4.1.48.Final</netty.version>
         <netty.boringssl.version>2.0.29.Final</netty.boringssl.version>
-        <curator.version>4.2.0</curator.version>
         <junit.version>4.13</junit.version>
         <mockito.version>1.10.19</mockito.version>
         <jetty.version>9.4.18.v20190429</jetty.version>
@@ -158,6 +157,16 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+            <dependency>     
+                <groupId>io.dropwizard.metrics</groupId>
+                <artifactId>metrics-core</artifactId>
+                <scope>test</scope>
+            </dependency>
+            <dependency>     
+                <groupId>org.xerial.snappy</groupId>
+                <artifactId>snappy-java</artifactId>
+                <scope>test</scope>
+            </dependency>    
             <dependency>
                 <groupId>org.herddb</groupId>
                 <artifactId>herddb-jdbc</artifactId>
@@ -202,11 +211,6 @@
                         <artifactId>jsr305</artifactId>
                     </exclusion>
                 </exclusions>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.curator</groupId>
-                <artifactId>curator-test</artifactId>
-                <version>${curator.version}</version>
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
