--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
     <scm>
         <url>scm:git:https://github.com/diennea/bookkeeper-visual-manager.git</url>
         <developerConnection>scm:git:https://github.com/diennea/bookkeeper-visual-manager.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>release/1.0</tag>
     </scm>
 
     <dependencyManagement>  
