--- a/standalone/pom.xml
+++ b/standalone/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>bookkeeper-visual-manager</groupId>
         <artifactId>bookkeeper-visual-manager-parent</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
