--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>bookkeeper-visual-manager-parent</artifactId>
     <packaging>pom</packaging>
-    <groupId>bookkeeper-visual-manager</groupId>
+    <groupId>org.bkvm</groupId>
     <version>1.1.0-SNAPSHOT</version>
 
     <name>BookKeeper Visual Manager - Parent</name>
