--- a/standalone/pom.xml
+++ b/standalone/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>org.bkvm</groupId>
-        <artifactId>bookkeeper-visual-manager-parent</artifactId>
+        <artifactId>bkvm-parent</artifactId>
         <version>1.1.0-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
@@ -19,7 +19,7 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>bookkeeper-visual-manager</artifactId>
+            <artifactId>bkvm</artifactId>
             <version>${project.version}</version>
             <type>war</type>
         </dependency>
@@ -69,7 +69,7 @@
                 <version>3.1.1</version>
                 <configuration>
                     <appendAssemblyId>false</appendAssemblyId>
-                    <finalName>bookkeeper-visual-manager-${project.version}</finalName>
+                    <finalName>bkvm-${project.version}</finalName>
                     <descriptors>
                         <descriptor>src/main/assemble/zip-assembly.xml</descriptor>
                     </descriptors>
