--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <version>1.1.0-SNAPSHOT</version>
     <name>BookKeeper Visual Manager - Parent</name>
     <url>https://bkvm.org</url>
+    <description>
+        BKVM is a Visual Manager for Apache BookKeeper cluster administration.
+    </description>
+    <inceptionYear>2019</inceptionYear>
     <developers>
         <developer>
             <id>mino181295</id>
