--- a/standalone/pom.xml
+++ b/standalone/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.bkvm</groupId>
         <artifactId>bkvm-parent</artifactId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.1.0</version>
         <relativePath>..</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
