--- a/web/pom.xml
+++ b/web/pom.xml
@@ -12,15 +12,15 @@
 
     <name>BookKeeper Visual Manager</name>
 
-    <dependencies>   
+    <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-        </dependency>     
+        </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk14</artifactId>
-        </dependency>     
+        </dependency>
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>org.eclipse.persistence.core</artifactId>
@@ -40,7 +40,7 @@
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>org.eclipse.persistence.jpa.jpql</artifactId>
-        </dependency>        
+        </dependency>
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
@@ -114,7 +114,7 @@
                     <groupId>org.apache.zookeeper</groupId>
                     <artifactId>*</artifactId>
                 </exclusion>
-            </exclusions>       
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.bookkeeper</groupId>
@@ -133,6 +133,12 @@
                     <artifactId>*</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.github.spotbugs</groupId>
