--- a/site-skin/pom.xml
+++ b/site-skin/pom.xml
@@ -25,7 +25,7 @@
         <relativePath>..</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <name>BookKeeper Visual Manager Site Skin</name>
+    <name>BKVM :: Site Skin</name>
     <artifactId>site-skin</artifactId>
     <packaging>jar</packaging>
     <build>
