--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <artifactId>bkvm-parent</artifactId>
     <packaging>pom</packaging>
     <groupId>org.bkvm</groupId>
-    <version>1.2.0</version>
+    <version>1.2.1-SNAPSHOT</version>
     <name>BookKeeper Visual Manager - Parent</name>
     <url>https://bkvm.org</url>
     <description>
@@ -77,7 +77,7 @@
     <scm>
         <url>scm:git:https://github.com/diennea/bookkeeper-visual-manager.git</url>
         <developerConnection>scm:git:https://github.com/diennea/bookkeeper-visual-manager.git</developerConnection>
-        <tag>v1.2.0</tag>
+        <tag>release/1.2</tag>
     </scm>
 
     <dependencyManagement>
