Make it optioanal to refresh metadata at boot - Do not prevent bootstrap in case of ZooKeeper connection issues - Add flag to not refresh metadata at boot

--- a/standalone/src/main/resources/conf/server.properties
+++ b/standalone/src/main/resources/conf/server.properties
@@ -1,10 +1,13 @@
 # ZooKeeper connection
 metadataServiceUri=zk+null://127.0.0.1:2181/ledgers
 
+# Refresh Metadata at every boot
+# if you set this flag to 'false' metadata will be refreshed only when requested
+metdata.refreshAtBoot=true
+
 # Jetty Server
 http.port=4500
 http.host=localhost
-
 
 # Users
 user.1.username=admin
