--- a/site-skin/pom.xml
+++ b/site-skin/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.bkvm</groupId>
         <artifactId>bkvm-parent</artifactId>
-        <version>2.0.0</version>
+        <version>2.0.1-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
