--- a/web/pom.xml
+++ b/web/pom.xml
@@ -135,9 +135,13 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-test</artifactId>
+            <scope>test</scope>
+         </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.12</version>
+            <artifactId>lombok</artifactId>            
             <scope>provided</scope>
         </dependency>
         <dependency>
