--- a/standalone/src/main/resources/conf/server.properties
+++ b/standalone/src/main/resources/conf/server.properties
@@ -13,6 +13,9 @@ metadata.refreshPeriodSeconds=300
 # The check is not case sensitive
 metadata.ledgerdescription=tablespacename,pulsar/,application
 
+# Refresh period, use 0 in order to not make it automatically
+metadata.refreshPeriodSeconds=300
+
 # Jetty Server
 http.port=4500
 http.host=localhost
