--- a/web/pom.xml
+++ b/web/pom.xml
@@ -155,6 +155,11 @@
             <artifactId>mockito-all</artifactId>
             <scope>test</scope>
         </dependency>
+         <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-test</artifactId>
+            <scope>test</scope>
+         </dependency>
     </dependencies>
 
     <build>
