--- a/standalone/src/main/resources/conf/server.properties
+++ b/standalone/src/main/resources/conf/server.properties
@@ -3,7 +3,11 @@ metadataServiceUri=zk+null://127.0.0.1:2181/ledgers
 
 # Refresh Metadata at every boot
 # if you set this flag to 'false' metadata will be refreshed only when requested
-metdata.refreshAtBoot=true
+metadata.refreshAtBoot=true
+
+# Refresh period, use 0 in order to not make it automatically
+metadata.refreshPeriodSeconds=300
+
 
 # Jetty Server
 http.port=4500
