--- a/standalone/src/main/resources/conf/server.properties
+++ b/standalone/src/main/resources/conf/server.properties
@@ -1,5 +1,5 @@
 # ZooKeeper connection
-metadataServiceUri=zk+null://127.0.0.1:2181/ledgers
+metadataServiceUri=zk://127.0.0.1:2181/ledgers
 
 # Refresh Metadata at every boot
 # if you set this flag to 'false' metadata will be refreshed only when requested
@@ -8,6 +8,10 @@ metadata.refreshAtBoot=true
 # Refresh period, use 0 in order to not make it automatically
 metadata.refreshPeriodSeconds=300
 
+# Custom ledger metadata that describes better a ledger
+# A key matches if any of the comma separated values is contained in the key
+# The check is not case sensitive
+metadata.ledgerdescription=tablespacename,pulsar/,application
 
 # Jetty Server
 http.port=4500
