--- a/web/pom.xml
+++ b/web/pom.xml
@@ -10,17 +10,17 @@
         <relativePath>..</relativePath>
     </parent>
 
-    <name>BookKeeper Visual Manager</name>
+    <name>BKVM :: Web</name>
 
-    <dependencies>   
+    <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-        </dependency>     
+        </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk14</artifactId>
-        </dependency>     
+        </dependency>
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>org.eclipse.persistence.core</artifactId>
@@ -40,7 +40,7 @@
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>org.eclipse.persistence.jpa.jpql</artifactId>
-        </dependency>        
+        </dependency>
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
@@ -114,7 +114,7 @@
                     <groupId>org.apache.zookeeper</groupId>
                     <artifactId>*</artifactId>
                 </exclusion>
-            </exclusions>       
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.bookkeeper</groupId>
@@ -133,6 +133,11 @@
                     <artifactId>*</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.github.spotbugs</groupId>
