--- a/web/src/main/bvmui/package.json
+++ b/web/src/main/bvmui/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "0.19.2",
+    "query-string": "6.13.7",
     "vue": "2.6.11",
     "vue-router": "3.1.6",
     "vuetify": "2.2.18",
