--- a/web/src/main/bvmui/package.json
+++ b/web/src/main/bvmui/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "test": "vue-cli-service test:unit -i",
     "lint": "vue-cli-service lint --no-fix"
   },
   "dependencies": {
@@ -17,18 +18,26 @@
     "yargs": "16.1.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.12.7",
     "@mdi/font": "5.8.55",
     "@vue/cli-plugin-babel": "4.5.9",
     "@vue/cli-plugin-eslint": "4.5.9",
+    "@vue/cli-plugin-unit-jest": "^4.5.9",
     "@vue/cli-service": "4.5.9",
     "@vue/eslint-config-standard": "5.1.2",
+    "@vue/test-utils": "^1.1.1",
+    "axios-mock-adapter": "^1.19.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "10.1.0",
+    "babel-jest": "^26.6.3",
     "eslint": "7.14.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-vue": "7.1.0",
     "sass": "1.29.0",
     "sass-loader": "10.1.0",
     "vue-cli-plugin-vuetify": "2.0.7",
+    "vue-jest": "^3.0.7",
     "vue-template-compiler": "2.6.12",
     "vuetify-loader": "1.6.0",
     "webpack": "4.42.0"
