Show refresh period on Status page and Upgrade libraries (#108)
* Upgrade libraries and bug fix

* Library upgrade

* Introduce test suite

* JUnit tests failing on junit

* Package.json remove ^

Co-authored-by: Matteo Minardi <matteo.minardi@diennea.com>

--- a/web/src/main/bvmui/package.json
+++ b/web/src/main/bvmui/package.json
@@ -5,37 +5,55 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "test": "vue-cli-service test:unit -i",
     "lint": "vue-cli-service lint --no-fix"
   },
   "dependencies": {
-    "axios": "0.19.2",
+    "axios": "0.21.0",
     "query-string": "6.13.7",
-    "vue": "2.6.11",
-    "vue-router": "3.1.6",
-    "vuetify": "2.2.18",
-    "vuex": "3.1.3",
-    "yargs": "15.3.1"
+    "vue": "2.6.12",
+    "vue-router": "3.4.9",
+    "vuetify": "2.3.19",
+    "vuex": "3.6.0",
+    "yargs": "16.1.1"
   },
   "devDependencies": {
-    "@mdi/font": "5.0.45",
-    "@vue/cli-plugin-babel": "4.2.3",
-    "@vue/cli-plugin-eslint": "4.2.0",
-    "@vue/cli-service": "4.2.3",
-    "@vue/eslint-config-standard": "5.0.1",
-    "babel-eslint": "10.0.3",
-    "eslint": "6.7.2",
-    "eslint-plugin-import": "2.20.1",
-    "eslint-plugin-vue": "6.1.2",
-    "sass": "1.26.3",
-    "sass-loader": "8.0.2",
-    "vue-cli-plugin-vuetify": "2.0.5",
-    "vue-template-compiler": "2.6.11",
-    "vuetify-loader": "1.4.3",
+    "@babel/core": "7.12.9",
+    "@babel/preset-env": "7.12.7",
+    "@mdi/font": "5.8.55",
+    "@vue/cli-plugin-babel": "4.5.9",
+    "@vue/cli-plugin-eslint": "4.5.9",
+    "@vue/cli-plugin-unit-jest": "4.5.9",
+    "@vue/cli-service": "4.5.9",
+    "@vue/eslint-config-standard": "5.1.2",
+    "@vue/test-utils": "1.1.1",
+    "axios-mock-adapter": "1.19.0",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "10.1.0",
+    "babel-jest": "26.6.3",
+    "eslint": "7.14.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-vue": "7.1.0",
+    "jest-junit": "12.0.0",
+    "sass": "1.29.0",
+    "sass-loader": "10.1.0",
+    "vue-cli-plugin-vuetify": "2.0.7",
+    "vue-jest": "3.0.7",
+    "vue-template-compiler": "2.6.12",
+    "vuetify-loader": "1.6.0",
     "webpack": "4.42.0"
   },
   "resolutions": {
     "minimist": "1.2.5",
     "acorn": "7.1.1"
+  },
+  "jest-junit": {
+    "suiteName": "Tests",
+    "outputDirectory": "target/surfire-reports",
+    "outputName": "bookkeeper-visual-manager-junit.xml",
+    "classNameTemplate": "{classname}",
+    "titleTemplate": "{title}",
+    "ancestorSeparator": " › "
   },
   "browserslist": [
     "last 1 version",
