Added roles filter anotations

--- a/standalone/src/main/resources/conf/server.properties
+++ b/standalone/src/main/resources/conf/server.properties
@@ -24,3 +24,8 @@ http.host=localhost
 user.1.username=admin
 user.1.password=admin
 user.1.role=Admin
+
+# Users
+user.2.username=hama
+user.2.password=hama
+user.2.role=User
