Security context filter

--- a/standalone/src/main/resources/conf/server.properties
+++ b/standalone/src/main/resources/conf/server.properties
@@ -26,6 +26,7 @@ user.1.password=admin
 user.1.role=Admin
 
 # Users
-user.2.username=hama
-user.2.password=hama
-user.2.role=User
+user.2.username=user
+user.2.password=user
+#User role have only read-only operation
+user.2.role=User 
