Check configured role

--- a/standalone/src/main/resources/conf/server.properties
+++ b/standalone/src/main/resources/conf/server.properties
@@ -20,6 +20,7 @@ metadata.refreshPeriodSeconds=300
 http.port=4500
 http.host=localhost
 
+#configurable roles are: Admin (Administrator role),User (read-only role)
 # Users
 user.1.username=admin
 user.1.password=admin
@@ -28,5 +29,4 @@ user.1.role=Admin
 # Users
 user.2.username=user
 user.2.password=user
-#User role have only read-only operation
 user.2.role=User 
