Introduce user role (#115)
* Introduce users role

* Fix

* Send role via api

* Cluster management based on user role

* Fix

* Added roles filter anotations

* Security context filter

* Check configured role

* Fix

* Fix

* Fix

* Update service.conf

Co-authored-by: Hamado Dene <dene@MacBook-Air-di-Hamado.local>

--- a/standalone/src/main/resources/conf/server.properties
+++ b/standalone/src/main/resources/conf/server.properties
@@ -20,6 +20,9 @@ metadata.refreshPeriodSeconds=300
 http.port=4500
 http.host=localhost
 
+#configurable roles are: Admin (Administrator role),User (read-only role)
 # Users
 user.1.username=admin
 user.1.password=admin
+user.1.role=Admin
+
