--- a/pom.xml
+++ b/pom.xml
@@ -330,6 +330,16 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+                <configuration>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <useReleaseProfile>false</useReleaseProfile>
+                    <releaseProfiles>ossrh</releaseProfiles>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <modules>
