--- a/standalone/src/main/resources/conf/server.properties
+++ b/standalone/src/main/resources/conf/server.properties
@@ -18,7 +18,7 @@ metadata.refreshPeriodSeconds=300
 
 # Jetty Server
 http.port=4500
-http.host=localhost
+http.host=0.0.0.0
 
 #configurable roles are: Admin (Administrator role),User (read-only role)
 # Users
