--- a/standalone/src/main/resources/conf/server.properties
+++ b/standalone/src/main/resources/conf/server.properties
@@ -16,6 +16,10 @@ metadata.ledgerdescription=tablespacename,pulsar/,application
 # Refresh period, use 0 in order to not make it automatically
 metadata.refreshPeriodSeconds=300
 
+# JDBC
+jdbc.url=jdbc:herddb:local
+jdbc.startDatabase=true
+
 # Jetty Server
 http.port=4500
 http.host=0.0.0.0
