--- a/site/pom.xml
+++ b/site/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.bkvm</groupId>
         <artifactId>bkvm-parent</artifactId>
-        <version>4.0.0-SNAPSHOT</version>
+        <version>3.1.0</version>
         <relativePath>..</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
