Bookies topology (kubernetes)

--- a/kubernetes/bkvm/templates/deployment.yaml
+++ b/kubernetes/bkvm/templates/deployment.yaml
@@ -30,18 +30,21 @@ spec:
       app.kubernetes.io/instance: bkvm
       app.kubernetes.io/release: bkvm
   template:
+
     metadata:
       labels:
         app.kubernetes.io/name: bkvm-server
         app.kubernetes.io/instance: bkvm
         app.kubernetes.io/release: bkvm
     spec:
+      serviceAccountName: {{ .Values.server.serviceAccount.name }}
       containers:
       - env:
         - name: BKVM_jdbc.url
           value: {{ .Values.server.jdbcUrl }}
         - name: BKVM_metadataServiceUri
           value: {{ .Values.server.metadataServiceUri }}
+        {{- toYaml .Values.server.env | nindent 8 }}
         image: "{{ .Values.server.image.repository }}:{{ .Values.server.image.tag }}"
         imagePullPolicy: {{ .Values.server.image.imagePullPolicy }}
         name: bkvm-ui
