rebase and fixes

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
         <guava.version>31.0.1-jre</guava.version>
         <protobuf-java.version>3.16.1</protobuf-java.version>
         <kotlin-stdlib-jdk8.version>1.6.10</kotlin-stdlib-jdk8.version>
+        <kubernetes-client.version>6.5.0</kubernetes-client.version>
     </properties>
     <licenses>
         <license>
@@ -296,6 +297,11 @@
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-stdlib-jdk8</artifactId>
                 <version>${kotlin-stdlib-jdk8.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.fabric8</groupId>
+                <artifactId>kubernetes-client</artifactId>
+                <version>${kubernetes-client.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
