--- a/standalone/src/main/resources/conf/server.properties
+++ b/standalone/src/main/resources/conf/server.properties
@@ -25,6 +25,7 @@ http.host=0.0.0.0
 # Users
 user.1.username=admin
 user.1.password=admin
+user.1.role=Admin
 
 # enable bookies topology (only works in k8s environment)
 topology.enabled=false
