--- a/standalone/src/main/resources/conf/server.properties
+++ b/standalone/src/main/resources/conf/server.properties
@@ -5,9 +5,6 @@ metadataServiceUri=zk://127.0.0.1:2181/ledgers
 # if you set this flag to 'false' metadata will be refreshed only when requested
 metadata.refreshAtBoot=true
 
-# Refresh period, use 0 in order to not make it automatically
-metadata.refreshPeriodSeconds=300
-
 # Custom ledger metadata that describes better a ledger
 # A key matches if any of the comma separated values is contained in the key
 # The check is not case sensitive
@@ -29,4 +26,7 @@ http.host=0.0.0.0
 user.1.username=admin
 user.1.password=admin
 user.1.role=Admin
+
+# enable bookies topology (only works in k8s environment)
+topology.enabled=false
 
