--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>bkvm-parent</artifactId>
     <packaging>pom</packaging>
@@ -42,19 +43,18 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <curator.version>5.2.0</curator.version>
-        <zookpeeper.version>3.6.2</zookpeeper.version>
-        <bookkeeper.version>4.14.4</bookkeeper.version>
+        <zookpeeper.version>3.9.2</zookpeeper.version>
+        <bookkeeper.version>4.17.0</bookkeeper.version>
         <slf4j.version>1.7.32</slf4j.version>
-        <netty.version>4.1.72.Final</netty.version>
-        <netty.boringssl.version>2.0.46.Final</netty.boringssl.version>
+        <netty.version>4.1.108.Final</netty.version>
         <!-- IntelliJ workaround https://github.com/junit-team/junit5/issues/2198-->
-        <junit.version>4.13.2</junit.version>
+        <junit.version>4.12</junit.version>
         <mockito.version>1.10.19</mockito.version>
-        <jetty.version>9.4.43.v20210629</jetty.version>
-        <herddb.version>0.24.0</herddb.version>
+        <jetty.version>9.4.54.v20240208</jetty.version>
+        <herddb.version>0.29.0</herddb.version>
 
         <yarn.version>v1.21.1</yarn.version>
-        <node.version>v15.2.1</node.version>
+        <node.version>v16.20.0</node.version>
         <frontend.path>src/main/bvmui</frontend.path>
         <maven.frontend.plugin.version>1.12.0</maven.frontend.plugin.version>
 
@@ -69,8 +69,8 @@
         <libs.javaxactivation.api>1.2.0</libs.javaxactivation.api>
         <dependency-check-maven.version>6.1.6</dependency-check-maven.version>
         <bc-fips.version>1.0.2.3</bc-fips.version>
-        <guava.version>31.0.1-jre</guava.version>
-        <protobuf-java.version>3.16.1</protobuf-java.version>
+        <guava.version>33.1.0-jre</guava.version>
+        <protobuf-java.version>3.19.6</protobuf-java.version>
         <kotlin-stdlib-jdk8.version>1.6.10</kotlin-stdlib-jdk8.version>
         <kubernetes-client.version>6.5.0</kubernetes-client.version>
     </properties>
@@ -171,18 +171,10 @@
             </dependency>
             <dependency>
                 <groupId>io.netty</groupId>
-                <artifactId>netty-all</artifactId>
+                <artifactId>netty-bom</artifactId>
                 <version>${netty.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.netty</groupId>
-                <artifactId>netty-tcnative-boringssl-static</artifactId>
-                <version>${netty.boringssl.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.netty</groupId>
-                <artifactId>netty-transport-native-epoll</artifactId>
-                <version>${netty.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>org.apache.curator</groupId>
@@ -264,6 +256,11 @@
                 </exclusions>
             </dependency>
             <dependency>
+                <groupId>org.apache.bookkeeper.stats</groupId>
+                <artifactId>bookkeeper-stats-api</artifactId>
+                <version>${bookkeeper.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${junit.version}</version>
@@ -271,7 +268,7 @@
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
-                <version>1.18.20</version>
+                <version>1.18.32</version>
             </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
@@ -363,7 +360,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.12.1</version>
                 <configuration>
                     <source>11</source>
                     <target>11</target>
@@ -403,6 +400,24 @@
                     <releaseProfiles>ossrh</releaseProfiles>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <argLine>
+                        <!-- required for running tests on JDK11+ -->
+                        --add-opens java.base/jdk.internal.loader=ALL-UNNAMED
+                        --add-opens java.base/java.lang=ALL-UNNAMED <!--Mockito-->
+                        --add-opens java.base/java.io=ALL-UNNAMED <!--Bookkeeper NativeIO-->
+                        --add-opens java.base/java.util=ALL-UNNAMED <!--System Lambda-->
+                        --add-opens java.base/sun.net=ALL-UNNAMED <!--netty.DnsResolverUtil-->
+                    </argLine>
+                    <forkCount>1</forkCount>
+                    <reuseForks>false</reuseForks>
+                    <trimStackTrace>false</trimStackTrace>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <modules>
@@ -431,24 +446,6 @@
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.22.0</version>
-                        <configuration>
-                            <forkCount>1</forkCount>
-                            <reuseForks>false</reuseForks>
-                            <trimStackTrace>false</trimStackTrace>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <version>3.8.0</version>
-                        <configuration>
-                            <encoding>${project.build.sourceEncoding}</encoding>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-resources-plugin</artifactId>
                         <version>3.1.0</version>
                         <configuration>
@@ -469,7 +466,7 @@
                     <plugin>
                         <groupId>org.projectlombok</groupId>
                         <artifactId>lombok-maven-plugin</artifactId>
-                        <version>1.18.20.0</version>
+                        <version>1.18.30.0</version>
                         <configuration>
                             <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
                             <outputDirectory>${project.basedir}/target/delombok</outputDirectory>
